Commit as commanded

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </header>
 
     <section class="showcase">
-      <img src="./images/slider/banner.jpg" alt="" />
+      <img src="./images/slider/home.jpeg" alt="" />
       <div class="banner-section overlay">
         <div class="container">
           <div class="row banner">
