--- a/services.html
+++ b/services.html
@@ -143,7 +143,7 @@
         </div>
 
         <div class="col-md-6 our-project-title">
-          <img src="./images/gyc_web/IMAG0130.jpg" class="img-responsive" />
+          <img src="./images/IMAG0130.jpg" class="img-responsive" />
         </div>
       </div>
     </div>
@@ -153,7 +153,7 @@
         <hr />
         <div class="col-md-6 our-project-title">
           <img
-            src="./images/gyc_web/Gallery Photos (180).jpg"
+            src="./images/Gallery Photos (180).jpg"
             class="img-responsive"
           />
         </div>
@@ -230,7 +230,7 @@
         </div>
 
         <div class="col-md-6 our-project-title">
-          <img src="images/gyc_web/IMAG0943.jpg" class="img-responsive" />
+          <img src="images/IMAG0943.jpg" class="img-responsive" />
         </div>
       </div>
     </div>
