--- a/portfolio.html
+++ b/portfolio.html
@@ -177,7 +177,7 @@
               <div class="recent-work-wrap">
                 <img
                   class="img-responsive"
-                  src="images/gyc_web/IMG_0431.JPG"
+                  src="images/IMG_0431.JPG"
                   alt=""
                 />
                 <div class="overlay">
@@ -200,7 +200,7 @@
               <div class="recent-work-wrap">
                 <img
                   class="img-responsive"
-                  src="images/gyc_web/IMG_0433.JPG"
+                  src="images/IMG_0433.JPG"
                   alt=""
                 />
                 <div class="overlay">
@@ -223,7 +223,7 @@
               <div class="recent-work-wrap">
                 <img
                   class="img-responsive"
-                  src="images/gyc_web/Gallery Photos (151).jpg"
+                  src="images/Gallery Photos (151).jpg"
                   alt=""
                 />
                 <div class="overlay">
@@ -246,7 +246,7 @@
               <div class="recent-work-wrap">
                 <img
                   class="img-responsive"
-                  src="images/gyc_web/tours/IMG-20180822-WA0010.jpg"
+                  src="images/IMG-20180822-WA0010.jpg"
                 />
                 <div class="overlay">
                   <div class="recent-work-inner">
