--- a/services.html
+++ b/services.html
@@ -84,7 +84,7 @@
       <div class="container">
         <h3>Our Projects</h3>
         <div class="col-md-6 our-project-title">
-          <img src="./images/project/project_1.jpg" class="img-responsive" />
+          <img src="./images/IMG_0433.JPG" class="img-responsive" />
         </div>
 
         <div class="col-md-6">
@@ -153,7 +153,7 @@
         <hr />
         <div class="col-md-6 our-project-title">
           <img
-            src="./images/Gallery Photos (180).jpg"
+            src="./images/IMG_0433.JPG"
             class="img-responsive"
           />
         </div>
