--- a/portfolio.html
+++ b/portfolio.html
@@ -184,7 +184,7 @@
                   <div class="recent-work-inner">
                     <a
                       class="preview"
-                      href="images/new/10.jpeg"
+                      href="images/IMG_0431.JPG"
                       rel="prettyPhoto"
                       ><i class="fa fa-eye"></i> View</a
                     >
@@ -207,7 +207,7 @@
                   <div class="recent-work-inner">
                     <a
                       class="preview"
-                      href="images/new/10.jpeg"
+                      href="images/IMG_0433.JPG"
                       rel="prettyPhoto"
                       ><i class="fa fa-eye"></i> View</a
                     >
@@ -230,7 +230,7 @@
                   <div class="recent-work-inner">
                     <a
                       class="preview"
-                      href="images/new/10.jpeg"
+                      href="images/Gallery Photos (151).jpg"
                       rel="prettyPhoto"
                       ><i class="fa fa-eye"></i> View</a
                     >
@@ -252,7 +252,7 @@
                   <div class="recent-work-inner">
                     <a
                       class="preview"
-                      href="images/new/10.jpeg"
+                      href="images/IMG-20180822-WA0010.jpg"
                       rel="prettyPhoto"
                       ><i class="fa fa-eye"></i> View</a
                     >
