--- a/index.html
+++ b/index.html
@@ -406,8 +406,7 @@
 
           <div class="col-md-6">
             <div class="copyright">
-              &copy; Copyright 2018 - Designed by The Ark Computer Programmers
-              and Animators Ltd
+              &copy; Copyright 2024 - Designed by The Ark 
             </div>
             <!-- 
 							All links in the footer should remain intact. 
