--- a/services.html
+++ b/services.html
@@ -408,12 +408,8 @@
 
           <div class="col-md-4 col-md-offset-4">
             <div class="copyright">
-              &copy; June 2015 by
-              <a
-                target="_blank"
-                href="http://bootstraptaste.com/"
-                title="Free Twitter Bootstrap WordPress Themes and HTML templates"
-                >Bootstrap Themes</a
+              &copy; 2024
+              
               >. All Rights Reserved.
             </div>
             <!-- 
