Update index.html partner

--- a/index.html
+++ b/index.html
@@ -112,6 +112,14 @@
                 src="images/partners/partner1.png"
               />
             </li>
+		  <li>
+              <img
+                class="img-responsive wow fadeInDown"
+                data-wow-duration="1000ms"
+                data-wow-delay="300ms"
+                src="images/partners/Partner2.png"
+              />
+            </li>
         
             <li>
               <img
